force-app/main/default/objects/Price_Ladder__c/fields/Ladder_Limit__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Limit__c</fullName>
    <label>Ladder Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>