force-app/main/default/objects/Price_Ladder__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Price Ladders</relationshipLabel>
    <relationshipName>Price_Ladders</relationshipName>
    <type>Lookup</type>
</CustomField>