force-app/main/default/objects/Price_Ladder__c/fields/Sales_Order_Limit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Limit__c</fullName>
    <label>Sales Order Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>