force-app/main/default/objects/Price_Ladder__c/fields/Validity_From__c.field-meta.xml
<CustomField>
    <fullName>Validity_From__c</fullName>
    <label>Validity From</label>
    <type>Date</type>
</CustomField>