force-app/main/default/objects/Price_Ladder__c/fields/Validity_To__c.field-meta.xml
<CustomField>
    <fullName>Validity_To__c</fullName>
    <label>Validity To</label>
    <type>Date</type>
</CustomField>